        - fix a possible crash if the INCR transfer process for a
          selection property timeouts and at least one chunk is
          received. (Emanuele Giaquinta)
	- work around as memory corruption bug in xorg's XrmSetDatabase (apparently
          broken since http://lists.freedesktop.org/archives/xorg-commit-diffs/2004-March/000239.html).
        - gdk-pixbuf is autodetected by default and preferred over libafterimage.
        - do not prepend a newline to the selection text when the starting line
          of the selection is not highlighted (Emanuele Giaquinta).
	- don't swap perl env with real env, save and restore it, just in case
          we ever get recursive perl invocations. also saves a bit of codespace
          with gcc.
        - fix various memory leaks (Emanuele Giaquinta).
        - fix typo in kIC terminfo capability, debian bug #446444.
        - document 'thickness' resource.
        - fix debian bug #504817, to the extent possible.
	- try to detect byte order at compile time, saves a couple of
          hundred bytes, if your compiler is smart enough.
        - add support for previewing the pasted data in confirm-paste
          (Emanuele Giaquinta).
        - added "newlines to spaces" option in selection-popup.
        - actually enabled solaris event ports backend (was disabled by accident).
        - revert to 38400 baud max., mission accomplished.
        - no longer create scary "pty_fill: PLEASE REPORT" message, instead,
          silently drain the input (problem is well understood now).
        - no longer swallow rob nation's own graphics mode commands.

9.10 Mon Dec 13 17:43:52 CET 2010
	- the "schmorp=north korea dickey=south korea" release.
        - INCOMPATIBLE CHANGE: make OSC 20 simpler and more correct
          (Emanuele Giaquinta).
	- if options were compiled out, this could lead to the option
          count to be defined wrongly. This is likely behind the
          failures with gcc 4.5.