@@ -68,7 +68,7 @@ static void
 output_string (rxvt_term *rt, const char *str)
 {
   if (strncmp (str, "command:", 8) == 0)
-    rt->cmd_write (str + 8, strlen (str) - 8);
+    rt->cmdbuf_append (str + 8, strlen (str) - 8);
   else if (strncmp (str, "perl:", 5) == 0)
     HOOK_INVOKE((rt, HOOK_USER_COMMAND, DT_STR, str + 5, DT_END));
   else
